add all sections

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   </head>
-  <body class="bg-[#111] overflow-x-hidden min-h-screen w-[100vw]">
+  <body class="overflow-x-hidden bg-[#111]">
     <div id="root"></div>
+    <div id="portal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
